# focal

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: AI.md  ARCHITECTURE.md  BACKEND.md  DATA-MODEL.md  FRONTEND.md  INTEGRATIONS.md  RELEASES_ARCHITECTURE.md  ROADMAP-MVP.md
ideas/: 2026-02-25 - Assistant IA TDAH.md  focal-reprise.md  saas-tdah-mockup.html
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  chat.rs  integrations.rs  memory.rs  mod.rs  notifications.rs  profile.rs  reviews.rs  settings.rs  suggestions.rs  tasks.rs  todos.rs
src-tauri/src/providers/: google.rs  mod.rs  oauth.rs
src/components/: AddTaskInput.module.css  AddTaskInput.tsx  CalendarView.module.css  CalendarView.tsx  ChatPanel.module.css  ChatPanel.tsx  ContextPanel.tsx  DroppableEmptyZone.module.css  DroppableEmptyZone.tsx  EditableEstimate.tsx  FocusNow.module.css  FocusNow.tsx  FocusTimer.module.css  FocusTimer.tsx  IntegrationsView.module.css  IntegrationsView.tsx  MainPanel.module.css  MainPanel.tsx  NotificationCenter.module.css  NotificationCenter.tsx  NotificationToast.module.css  NotificationToast.tsx  OnboardingView.module.css  OnboardingView.tsx  PrepBanner.module.css  PrepBanner.tsx  PriorityBadge.module.css  PriorityBadge.tsx  ProfileEditForm.tsx  ProfileField.tsx  ProfileView.module.css  ProfileView.tsx  ProgressBar.module.css  ProgressBar.tsx  ReviewView.module.css  ReviewView.tsx  ScoreSelector.tsx  SettingsView.module.css  SettingsView.tsx  Sidebar.module.css  (+21 more)
src/data/: chatConstants.ts  integrationConstants.ts  mockChat.ts  mockIntegrations.ts  mockSettings.ts  mockStrategyReviews.ts  mockTasks.ts  mockTodos.ts  profileLabels.ts  settingsConstants.ts  settingsData.ts  strategyConstants.ts  tagConstants.ts
src/hooks/: useNotifications.ts  useStrategies.ts  useTaskActions.ts
src/services/: chat.ts  index.ts  integrations.ts  memory.ts  notifications.ts  profile.ts  reviews.ts  settings.ts  tasks.ts  todos.ts
src/styles/: theme.css
src/types/: index.ts
src/utils/: dateFormat.ts  (+1 more)
website/: freelance.html  independants.html  index.html
(+13 files in other folders)
