[package]
name = "focal"
version = "0.1.0"
description = "AI-powered ADHD assistant"
authors = ["David Martins"]
edition = "2021"

[lib]
name = "focal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "net", "io-util", "time", "rt"] }
urlencoding = "2"
open = "5"
